# practice3-detection

./: CMakeLists.txt  README.md  train_cascade_detector.py
apps/: CMakeLists.txt  detector _Makarova.cpp  detector.cpp
scripts/: CMakeLists.txt  train_cascade_detector.py
